# RunAway

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  RunGame.bat  __init__.py  constants_config.py  dependencies.txt  index.py  pyproject.toml  run-away-debug.spec  run-away.spec
.github/workflows/: build.yaml  ci.yaml
core-classes/: level.py  testingCommits.txt
core_classes/: spawnable.py
core_classes/entities/: jumpable_entity.py  keyboard_controllable_entity.py  moving_entity.py  spawnable.py
core_classes/world/: block.py  level.py
resources/gfx/tilesets/: terrain_spring.tsx
resources/levels/: level_spring.tmx
run_away/: __main__.py  config.py  main.py
run_away/core/: NPC.py  background.py  camera.py  enemy.py  entity.py  home.py  level.py  npc.py  player.py  portal.py  shop.py  weapon.py
run_away/resources/gfx/GUI/: shop.tmx
run_away/resources/gfx/enemies/: enemies-spritesheet.png.spritesheet_do_not_open
run_away/resources/gfx/tilesets/: home.tsx  objects.tsx  terrain_lightning.tsx  terrain_objects.tsx  terrain_rain.tsx  terrain_snow.tsx  terrain_wind.tsx  terrain_winter.tsx
run_away/resources/gfx/tilesets/gui_tilesets/: buttons1.tsx  buttons2.tsx  gui2.tsx
run_away/resources/gfx/weapons/: test_stick.aseprite
run_away/resources/levels/: level_dungeon.tmx  level_home.tmx  level_hub.tmx  level_hub_rainaccess.tmx  level_lightning.tmx  level_rain.tmx  level_rain_return.tmx  level_rainreturn.tmx  level_snow.tmx  level_spring.tmx  level_wind.tmx  run-away-levels.tiled-project
run_away/utils/: tools.py
src/: camera.py  config.py  main.py
src/core/: camera.py  enemy.py  entity.py  level.py  player.py
