[tool.poetry]
name = "run-away"
version = "0.6.0"
description = "A side-scrolling platformer RPG game inspired by 2D indie hits like Celeste, Hollow Knight, and Towerfall."
authors = ["lukadd16 <lukadd@icloud.com>", "RaddedMC <mycooljames@hotmail.com>", "SharafSyed <sharaf.syed04@gmail.com>", "KelseyKloosterman <kkloost2@uwo.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytmx = "^3.31"
pygame = "2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game = "run_away.main:main"
